--- a/Website/about.html
+++ b/Website/about.html
@@ -30,14 +30,86 @@
   <section class="about-nav">
     <div class="about-nav-container">
       <a href="#our-story" class="about-tab-link active">Our Story</a>
-      <a href="#mission" class="about-tab-link">Mission</a>
-      <a href="#vision" class="about-tab-link">Vision</a>
-      <a href="#values" class="about-tab-link">Values</a>
+      <a href="#mission-vision-values" class="about-tab-link">Mission, Vision & Values</a>
       <a href="#our-approach" class="about-tab-link">Our Approach</a>
       <a href="#team" class="about-tab-link">Team</a>
       <a href="#partners" class="about-tab-link">Partners</a>
     </div>
   </section>
+
+ </div>
+</section>
+
+  <!-- Workflow Section -->
+<section class="seamless-workflow">
+  <div class="workflow-header">
+    <h2 class="section-title">Our End-to-End Process</h2>
+    <p class="section-subtitle">A comprehensive approach to delivering excellence at every stage.</p>
+  </div>
+  
+  <div class="seamless-track">
+    <!-- Step 1: Product Design -->
+    <div class="seamless-card reveal">
+      <div class="img-box">
+        <img src="images.unsplash.com" alt="Product Design Phase" loading="lazy">
+      </div>
+      <div class="text-box">
+        <span class="num">01</span>
+        <h3>Product Design</h3>
+        <p>Expert engineering and UI/UX prototyping to turn your concept into a viable blueprint.</p>
+      </div>
+    </div>
+
+    <!-- Step 2: Manufacturing & QC -->
+    <div class="seamless-card reveal">
+      <div class="img-box">
+        <img src="images.unsplash.com" alt="Manufacturing and Quality Control" loading="lazy">
+      </div>
+      <div class="text-box">
+        <span class="num">02</span>
+        <h3>Manufacturing & QC</h3>
+        <p>Precision-led production with multi-stage quality checks to ensure zero-defect output.</p>
+      </div>
+    </div>
+
+    <!-- Step 3: Distribution -->
+    <div class="seamless-card reveal">
+      <div class="img-box">
+        <img src="images.unsplash.com" alt="Global Distribution" loading="lazy">
+      </div>
+      <div class="text-box">
+        <span class="num">03</span>
+        <h3>Distribution</h3>
+        <p>Optimized logistics and secure supply chain management for global product delivery.</p>
+      </div>
+    </div>
+
+    <!-- Step 4: Training & Adoption -->
+    <div class="seamless-card reveal">
+      <div class="img-box">
+        <img src="images.unsplash.com" alt="Training and User Adoption" loading="lazy">
+      </div>
+      <div class="text-box">
+        <span class="num">04</span>
+        <h3>Training & Adoption</h3>
+        <p>On-site training and digital onboarding to ensure your team masters the new technology.</p>
+      </div>
+    </div>
+
+    <!-- Step 5: Aftersales & Monitoring -->
+    <div class="seamless-card reveal">
+      <div class="img-box">
+        <img src="images.unsplash.com" alt="Aftersales Support and Monitoring" loading="lazy">
+      </div>
+      <div class="text-box">
+        <span class="num">05</span>
+        <h3>Aftersales & Monitoring</h3>
+        <p>Continuous performance tracking and 24/7 technical support for long-term reliability.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
 
   <!-- Our Story Section -->
   <section id="our-story" class="about-section">
@@ -60,33 +132,27 @@
     </div>
   </section>
 
-  <!-- Mission Section -->
-  <section id="mission" class="about-section">
+  <!-- Mission, Vision, Values Section -->
+  <section id="mission-vision-values" class="about-section">
     <div class="section-container">
-      <h2>Mission</h2>
-      <p>To empower youth and smallholder farmers with innovative, sustainable agricultural solutions that increase productivity, improve livelihoods, and create economic opportunities.</p>
-    </div>
-  </section>
-
-  <!-- Vision Section -->
-  <section id="vision" class="about-section">
-    <div class="section-container">
-      <h2>Vision</h2>
-      <p>A thriving agricultural ecosystem where farmers have access to cutting-edge technology, quality products, and expert support to build sustainable, profitable farms.</p>
-    </div>
-  </section>
-
-  <!-- Values Section -->
-  <section id="values" class="about-section">
-    <div class="section-container">
-      <h2>Our Values</h2>
-      <ul class="values-list">
-        <li><strong>Innovation:</strong> Continuous improvement in product and service delivery</li>
-        <li><strong>Sustainability:</strong> Environmental and economic responsibility</li>
-        <li><strong>Farmer-Centric:</strong> Solutions designed with farmer needs in mind</li>
-        <li><strong>Impact:</strong> Measurable improvement in farmer livelihoods</li>
-        <li><strong>Integrity:</strong> Transparent and ethical business practices</li>
-      </ul>
+      <div class="mvv-grid">
+        <div class="mvv-item" id="mission">
+          <h2>Mission</h2>
+          <p>To empower youth and smallholder farmers with innovative, sustainable agricultural solutions that increase productivity, improve livelihoods, and create economic opportunities.</p>
+          <h2>Vision</h2>
+          <p>A thriving agricultural ecosystem where farmers have access to cutting-edge technology, quality products, and expert support to build sustainable, profitable farms.</p>
+        </div>
+        <div class="mvv-item" id="values">
+          <h2>Our Values</h2>
+          <ul class="values-list">
+            <li><strong>Innovation:</strong> Continuous improvement in product and service delivery</li>
+            <li><strong>Sustainability:</strong> Environmental and economic responsibility</li>
+            <li><strong>Farmer-Centric:</strong> Solutions designed with farmer needs in mind</li>
+            <li><strong>Impact:</strong> Measurable improvement in farmer livelihoods</li>
+            <li><strong>Integrity:</strong> Transparent and ethical business practices</li>
+          </ul>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -129,32 +195,6 @@
                   </div>
               </div>
           </div>
-  </section>
-            
-      
- 
-
-  <!-- Partners Section -->
-  <section id="partners" class="about-section alternate-bg">
-    <div class="section-container">
-      <h2>Partners & Collaborators</h2>
-      <p class="section-intro">We work with leading organizations to amplify our impact across Africa.</p>
-      <div class="partners-carousel" aria-label="Partners logo carousel">
-        <div class="partners-track">
-          <a class="partner-logo-item" href="https://www.amref.org/" target="_blank" rel="noopener"><img src="../images/download amref logo.png" alt="Amref" loading="lazy" /></a>
-          <a class="partner-logo-item" href="https://www.mercycorps.org/" target="_blank" rel="noopener"><img src="../images/mercy-corps.jpg.webp" alt="Mercy Corps" loading="lazy" /></a>
-          <a class="partner-logo-item" href="https://www.usaid.gov/" target="_blank" rel="noopener"><img src="../images/LOGO usaid-1.jpg.webp" alt="USAID" loading="lazy" /></a>
-          <a class="partner-logo-item" href="https://www.rti.org/" target="_blank" rel="noopener"><img src="../images/LOGO rti.jpg.webp" alt="RTI" loading="lazy" /></a>
-          <a class="partner-logo-item" href="https://www.murang'a.go.ke/" target="_blank" rel="noopener"><img src="../images/LOGO muranga-county.jpg.webp" alt="Murang'a County" loading="lazy" /></a>
-        </div>
-      </div>
-      <div class="partners-cta">
-        <h3>Interested in Partnering?</h3>
-        <p>We're always looking for organizations committed to transforming agriculture in Africa.</p>
-        <a href="contact.html" class="cta-button primary">Get in Touch</a>
-      </div>
-    </div>
-  </section>
   </section>
 
       <!--Footer-->
