--- a/Website/index.html
+++ b/Website/index.html
@@ -33,74 +33,133 @@
     </div>
 </section>
 
-    <!-- Product Slideshow Section -->
-    <section class="product-slideshow">
-        <div class="slideshow-container">
-            <div class="slide fade">
-                <img src="../images/SOLAR THRIVE..jpg" alt="Solar Thrive" loading="lazy">
-                <div class="slide-content">
-                    <h2>Solar Thrive</h2>
-                    <p>Nomad Cans, Ice Water Dispenser, and Eco-Sav Bag — a last-mile market solutions</p>
-                    <div class="slide-buttons">
-                        <a href="../store-app/index.html" class="cta-button secondary">Buy</a>
-                        <a href="contact.html" class="cta-button secondary">Contact</a>
-                        <a href="contact.html#partner-form" class="cta-button secondary">Partner</a>
-                    </div>
+<!-- Solar Thrive Ecosystem Section -->
+<section class="solar-thrive-section">
+    <h2 class="thrive-header">SOLAR THRIVE COLLECTION</h2>
+    <div class="thrive-grid-container">
+        <div class="thrive-left-panel">
+            <div class="thrive-accordion">
+                <button class="thrive-accordion-button">Explore Our Technology</button>
+                <div class="thrive-accordion-content">
+                    <ul>
+                        <li>
+                            <div class="li-header">Ice Water Dispenser (IWD)</div>
+                            <div class="thrive-product-card">
+                                <img src="../images/IWD.jpg" alt="Ice Water Dispenser">
+                                <div class="product-card-content">
+                                    <h4>Ice Water Dispenser (IWD)</h4>
+                                    <p>A solar-powered chilling system that produces and stores food-grade glycol-cooled water for mini cold chain applications.</p>
+                                    <a href="products.html#solar-cooling" class="cta-button secondary">Learn More</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="li-header">Nomad Cans</div>
+                            <div class="thrive-product-card">
+                                <img src="../images/NOMAD CANS.jpeg" alt="Nomad Cans">
+                                <div class="product-card-content">
+                                    <h4>Nomad Cans</h4>
+                                    <p>Patented, insulated food-grade containers designed for the safe transport of milk, maintaining optimal temperature using a chilled thermocore insert.</p>
+                                    <a href="products.html#SOLAR-THRIVE" class="cta-button secondary">Learn More</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="li-header">Eco-Sav Bag</div>
+                            <div class="thrive-product-card">
+                                <img src="../images/Eco-Sav bag.jpg" alt="Eco-Sav Bag">
+                                <div class="product-card-content">
+                                    <h4>Eco-Sav Bag</h4>
+                                    <p>Durable, insulated carry packs designed for transporting fish and produce in cooled conditions, preserving freshness from farm to market.</p>
+                                    <a href="products.html#SOLAR-THRIVE" class="cta-button secondary">Learn More</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="li-header">MaziwaPlus DMS</div>
+                            <div class="thrive-product-card">
+                                <img src="../images/M+ DMS.png" alt="MaziwaPlus DMS">
+                                <div class="product-card-content">
+                                    <h4>MaziwaPlus DMS</h4>
+                                    <p>A cloud-based, mobile-integrated platform for real-time monitoring, route management, and digital records across the dairy supply chain.</p>
+                                    <a href="products.html#SOLAR-THRIVE" class="cta-button secondary">Learn More</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="li-header">Electric Mobility</div>
+                            <div class="thrive-product-card">
+                                <img src="../images/e-mobility.png" alt="Electric Mobility">
+                                <div class="product-card-content">
+                                    <h4>Electric Mobility</h4>
+                                    <p>Sustainable, low-cost transport for last-mile delivery of agricultural products, fully integrated with our solar ecosystem.</p>
+                                    <a href="products.html" class="cta-button secondary">Learn More</a>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
-
-            <div class="slide fade">
-                <img src="../images/pre chillers PRO.jpg" alt="Solar Cooling" loading="lazy">
-                <div class="slide-content">
-                    <h2>Solar Cooling Solutions</h2>
-                    <p>Hybrid milk chillers and solar-powered cooling systems that preserves milk for longer hence reducing produce wastage</p>
-                    <div class="slide-buttons">
-                        <a href="../store-app/index.html" class="cta-button secondary">Buy</a>
-                        <a href="contact.html" class="cta-button secondary">Contact</a>
-                        <a href="contact.html#partner-form" class="cta-button primary">Partner</a>
-                    </div>
-                </div>
+            <div class="thrive-explanation">
+                <h3>How IWD Powers the Ecosystem</h3>
+                <p>The Ice Water Dispenser (IWD) is the heart of our last-mile cooling solution. It generates and stores ice, providing a ready source of cooling for Nomad Cans and Eco-Sav Bags, ensuring produce and dairy remain fresh during transport. This decentralized cooling hub, powered by solar energy, also supports the charging of devices for MaziwaPlus DMS data entry and powers our Electric Mobility solutions, creating a fully integrated, sustainable ecosystem for farmers.</p>
             </div>
-
-            <div class="slide fade">
-                <img src="../images/M+ DMS.png" alt="MaziwaPlus DMS" loading="lazy">
-                <div class="slide-content">
-                    <h2>MaziwaPlus Dairy Management System</h2>
-                    <p>Cloud-based ERP for production tracking, financial management, and market linkages</p>
-                    <div class="slide-buttons">
-                        <a href="../store-app/index.html" class="cta-button secondary">Buy</a>
-                        <a href="contact.html" class="cta-button secondary">Contact</a>
-                        <a href="contact.html#partner-form" class="cta-button secondary">Partner</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="slide fade">
-                <img src="../images/DRYER.webp" alt="Eco-Sav Dryer" loading="lazy">
-                <div class="slide-content">
-                    <h2>Eco-Sav Solar Dryer</h2>
-                    <p>Solar-powered dehydrators designed to quickly and efficiently dry produce ensuring highest-quality results</p>
-                    <div class="slide-buttons">
-                        <a href="../store-app/index.html" class="cta-button secondary">Buy</a>
-                        <a href="contact.html" class="cta-button secondary">Contact</a>
-                        <a href="contact.html#partner-form" class="cta-button secondary">Partner</a>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Navigation buttons -->
-            <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
-            <a class="next" onclick="changeSlide(1)">&#10095;</a>
         </div>
-
-        <!-- Dots for slideshow -->
-        <div class="dots-container">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
-            <span class="dot" onclick="currentSlide(4)"></span>
+        <div class="thrive-right-panel">
+            <div class="hub-spoke-diagram">
+                <svg class="connecting-lines" viewbox="0 0 100 100" preserveAspectRatio="none">
+                    <line x1="50" y1="50" x2="10" y2="20" />
+                    <line x1="50" y1="50" x2="10" y2="80" />
+                    <line x1="50" y1="50" x2="90" y2="20" />
+                    <line x1="50" y1="50" x2="90" y2="80" />
+                </svg>
+                <div class="hub-item" id="iwd">
+                    <img src="../images/IWD.jpg" alt="Ice Water Dispenser">
+                    <span>IWD</span>
+                </div>
+                <div class="spoke-item" id="nomad-can">
+                    <img src="../images/NOMAD CANS.jpeg" alt="Nomad Cans">
+                    <span>Nomad Cans</span>
+                </div>
+                <div class="spoke-item" id="eco-sav">
+                    <img src="../images/Eco-Sav bag.jpg" alt="Eco-Sav Bag">
+                    <span>Eco-Sav Bag</span>
+                </div>
+                <div class="spoke-item" id="maziwa-dms">
+                    <img src="../images/M+ DMS.png" alt="MaziwaPlus DMS">
+                    <span>Maziwa+ DMS</span>
+                </div>
+                <div class="spoke-item" id="e-mobility">
+                    <img src="../images/e-mobility.png" alt="E-Mobility">
+                    <span>E-Mobility</span>
+                </div>
+            </div>
         </div>
-    </section>
+    </div>
+</section>
+
+<!-- Savings Calculator Section -->
+<section class="savings-calculator-section">
+    <div class="section-container">
+        <h2>Calculate Your Savings</h2>
+        <div class="calculator-container">
+            <div class="form-group">
+                <label for="tradCost">Traditional Ice Cost (KSh/kg)</label>
+                <input type="number" id="tradCost" placeholder="e.g. 70-100">
+            </div>
+            <div class="form-group">
+                <label for="iwdCost">IWD Water Cost (KSh/Litre)</label>
+                <input type="number" id="iwdCost" placeholder="e.g. 5">
+            </div>
+            <div class="form-group">
+                <label for="waterQty">Quantity Dispensed (Litres/Day)</label>
+                <input type="number" id="waterQty" placeholder="e.g. 50">
+            </div>
+            <button id="calcSavingsBtn" class="cta-button primary">Calculate Savings</button>
+            <div id="savingsResult" class="savings-result"></div>
+        </div>
+    </div>
+</section>
 
     <!-- Impact Highlights Section -->
     <section class="impact-highlights">
@@ -157,7 +216,7 @@
         <h2>Solutions</h2>
         <div class="solutions-grid">
             <div class="solution-card">
-                <h3>For Farmers</h3>
+                <h3>Our Farmers</h3>
                 <p>Access cutting-edge tools and resources to maximize your farm's potential.</p>
                 <ul class="solution-steps">
                     <li>Learn about solutions on the homepage</li>
@@ -170,7 +229,7 @@
                 </div>
             </div>
             <div class="solution-card">
-                <h3>For Partners</h3>
+                <h3>Our Partners</h3>
                 <p>Join our network of organizations transforming agriculture a community at a time.</p>
                 <ul class="solution-steps">
                     <li>Review company overview and impact</li>
@@ -183,7 +242,7 @@
                 </div>
             </div>
             <div class="solution-card">
-                <h3>For Distributors</h3>
+                <h3>Our Distributors</h3>
                 <p>Discover our full range of innovative agricultural solutions.</p>
                 <ul class="solution-steps">
                     <li>Review our product specifications</li>
@@ -197,7 +256,7 @@
                 </div>
             </div>
              <div class="solution-card">
-                <h3>Explore career</h3>
+                <h3>Join Our Team</h3>
                 <p>Join our team as we revolutionize agriculture across the country.</p>
                 <ul class="solution-steps">
                     <li>learn more about sct on about</li>
@@ -211,6 +270,31 @@
             </div>
         </div>
     </section>
+
+
+  <!-- Partners Section -->
+  <section id="partners" class="about-section alternate-bg">
+    <div class="section-container">
+      <h2>Partners & Collaborators</h2>
+      <p class="section-intro">We work with leading organizations to amplify our impact across Africa.</p>
+      <div class="partners-carousel" aria-label="Partners logo carousel">
+        <div class="partners-track">
+          <a class="partner-logo-item" href="https://www.amref.org/" target="_blank" rel="noopener"><img src="../images/download amref logo.png" alt="Amref" loading="lazy" /></a>
+          <a class="partner-logo-item" href="https://www.mercycorps.org/" target="_blank" rel="noopener"><img src="../images/mercy-corps.jpg.webp" alt="Mercy Corps" loading="lazy" /></a>
+          <a class="partner-logo-item" href="https://www.usaid.gov/" target="_blank" rel="noopener"><img src="../images/LOGO usaid-1.jpg.webp" alt="USAID" loading="lazy" /></a>
+          <a class="partner-logo-item" href="https://www.rti.org/" target="_blank" rel="noopener"><img src="../images/LOGO rti.jpg.webp" alt="RTI" loading="lazy" /></a>
+          <a class="partner-logo-item" href="https://www.murang'a.go.ke/" target="_blank" rel="noopener"><img src="../images/LOGO muranga-county.jpg.webp" alt="Murang'a County" loading="lazy" /></a>
+        </div>
+      </div>
+      <div class="partners-cta">
+        <h3>Interested in Partnering?</h3>
+        <p>We're always looking for organizations committed to transforming agriculture in Africa.</p>
+        <a href="contact.html" class="cta-button primary">Get in Touch</a>
+      </div>
+    </div>
+  </section>
+  </section>
+
 
      <!--Footer-->
   <div id="footer-placeholder"></div>
