--- a/Website/products.html
+++ b/Website/products.html
@@ -71,6 +71,14 @@
                             <a href="" class="cta-button secondary">Learn More</a>
                         </div>
                     </div>
+                    <div class="product-card" data-product="maziwaplus-dms">
+                        <img class="product-image" loading="lazy" src="" alt="">
+                        <h4></h4>
+                        <p class="product-description"></p>
+                        <div class="product-actions">
+                            <a href="" class="cta-button secondary">Learn More</a>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -120,34 +128,6 @@
                 </div>
             </div>
 
-            <div id="Dairy-Management-systems" class="product-category">
-                <h3 class="category-title"> Dairy Management systems</h3>
-                <div class="products-grid single-column">
-                    <div class="product-card" data-product="maziwaplus-dms">
-                        <img class="product-image" loading="lazy" src="" alt="">
-                        <h4></h4>
-                        <p class="product-description"></p>
-                        <div class="product-actions">
-                            <a href="" class="cta-button secondary">Learn More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div id="drying-systems" class="product-category">
-                <h3 class="category-title">Drying Systems</h3>
-                <div class="products-grid single-column">
-                    <div class="product-card" data-product="eco-sav-dryer">
-                        <img class="product-image small" loading="lazy" src="" alt="">
-                        <h4></h4>
-                        <p class="product-description"></p>
-                        <div class="product-actions">
-                            <a href="" class="cta-button secondary">Learn More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
 
             <!-- Financing Options Section -->
               <div id="financing-options" class="product-category">
@@ -176,8 +156,42 @@
                     </div>
                 </div>
             </div>
-          </div>
+
+            <div id="drying-systems" class="product-category">
+                <h3 class="category-title">Drying Systems</h3>
+                <div class="products-grid single-column">
+                    <div class="product-card" data-product="eco-sav-dryer">
+                        <img class="product-image small" loading="lazy" src="" alt="">
+                        <h4></h4>
+                        <p class="product-description"></p>
+                        <div class="product-actions">
+                            <a href="" class="cta-button secondary">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>             
+        </div>
     </section>
+
+<section class="products-showcase">
+    <div class="section-container">
+        <div id="annual-product-catalogue" class="product-category">
+            <h3 class="category-title">Annual Product Catalogue</h3>
+            <div class="products-grid single-column">
+                <div class="product-card">
+                    <img class="product-image" src="../images/catalogue-preview.webp" alt="Annual Product Catalogue 2026 Preview" loading="lazy" style="height: 250px;">
+                    <h4>Annual Product Catalogue 2026 <span class="badge" style="font-size: 0.7rem; vertical-align: middle; margin-left: 8px;">New 2026</span></h4>
+                    <p class="product-description">Explore our full 2026 collection, including technical specs and pricing.<br><small>PDF (2.1 MB) • 4 Pages</small></p>
+                    <div class="product-actions">
+                        <a href="path/to/your/catalogue.pdf" download="Savanna_Circuit_Catalogue_2026.pdf" class="cta-button primary">Download Catalogue</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
+</section>
+
     
     <!--Footer-->
   <div id="footer-placeholder"></div>
