--- a/about.html
+++ b/about.html
@@ -7,49 +7,31 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <!-- Navigation (standardized) -->
-  <nav class="navbar">
-    <div class="nav-container">
-      <div class="logo">
-        <a href="index.html" class="logo-link">
-          <img src="../images/sav logo (2).jpeg" alt="Savanna Circuit Logo" class="logo-image" />
-          <span class="site-title"> SAVANNA CIRCUIT</span>
-        </a>
-      </div>
-      <ul class="nav-menu">
-        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-        <li class="nav-item"><a href="products.html" class="nav-link">Products</a></li>
-        <li class="nav-item"><a href="impact.html" class="nav-link">Impact</a></li>
-        <li class="nav-item"><a href="news.html" class="nav-link">News & Stories</a></li>
-        <li class="nav-item"><a href="support.html" class="nav-link">Support</a></li>
-        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-        <li class="nav-item"><a href="../store-app/index.html" class="cta-button primary" nav-cta>Buy</a></li>
-      </ul>
-      <div class="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
-  </nav>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet">
+
+  <!-- Navigation -->
+   <div id="Header"></div>
 
   <!-- Hero Section -->
-  <section class="hero-subpage">
-    <h1>Team</h1>
-    <p>Empowering farmers through innovation, technology, and sustainable solutions</p>
-  </section>
+<section class="hero-modern">
+    <!-- Background image now replaces the video -->
+    <div class="hero-background">
+        <img src="../images/TEAM (2).JPG" alt="News and Stories background" class="bg-media" loading="lazy">
+    </div>
 
-  <!-- About Navigation Tabs -->
+    <!-- Content is inside a protective "Glass" card -->
+    <div class="hero-lead-card">
+ <h1>Team</h1>
+    <p>Empowering farmers through innovation, technology, and sustainable solutions</p>
+    </div>
+</section>
+   <!-- About Navigation Tabs -->
   <section class="about-nav">
     <div class="about-nav-container">
       <a href="#our-story" class="about-tab-link active">Our Story</a>
-      <a href="#mission" class="about-tab-link">Mission</a>
-      <a href="#vision" class="about-tab-link">Vision</a>
-      <a href="#values" class="about-tab-link">Values</a>
+      <a href="#mission-vision-values" class="about-tab-link">Mission, Vision & Values</a>
       <a href="#our-approach" class="about-tab-link">Our Approach</a>
       <a href="#team" class="about-tab-link">Team</a>
-      <a href="#partners" class="about-tab-link">Partners</a>
     </div>
   </section>
 
@@ -74,33 +56,27 @@
     </div>
   </section>
 
-  <!-- Mission Section -->
-  <section id="mission" class="about-section">
+  <!-- Mission, Vision, Values Section -->
+  <section id="mission-vision-values" class="about-section">
     <div class="section-container">
-      <h2>Mission</h2>
-      <p>To empower youth and smallholder farmers with innovative, sustainable agricultural solutions that increase productivity, improve livelihoods, and create economic opportunities.</p>
-    </div>
-  </section>
-
-  <!-- Vision Section -->
-  <section id="vision" class="about-section">
-    <div class="section-container">
-      <h2>Vision</h2>
-      <p>A thriving agricultural ecosystem where farmers have access to cutting-edge technology, quality products, and expert support to build sustainable, profitable farms.</p>
-    </div>
-  </section>
-
-  <!-- Values Section -->
-  <section id="values" class="about-section">
-    <div class="section-container">
-      <h2>Our Values</h2>
-      <ul class="values-list">
-        <li><strong>Innovation:</strong> Continuous improvement in product and service delivery</li>
-        <li><strong>Sustainability:</strong> Environmental and economic responsibility</li>
-        <li><strong>Farmer-Centric:</strong> Solutions designed with farmer needs in mind</li>
-        <li><strong>Impact:</strong> Measurable improvement in farmer livelihoods</li>
-        <li><strong>Integrity:</strong> Transparent and ethical business practices</li>
-      </ul>
+      <div class="mvv-grid">
+        <div class="mvv-item" id="mission">
+          <h2>Mission</h2>
+          <p>To empower youth and smallholder farmers with innovative, sustainable agricultural solutions that increase productivity, improve livelihoods, and create economic opportunities.</p>
+          <h2>Vision</h2>
+          <p>A thriving agricultural ecosystem where farmers have access to cutting-edge technology, quality products, and expert support to build sustainable, profitable farms.</p>
+        </div>
+        <div class="mvv-item" id="values">
+          <h2>Our Values</h2>
+          <ul class="values-list">
+            <li><strong>Innovation:</strong> Continuous improvement in product and service delivery</li>
+            <li><strong>Sustainability:</strong> Environmental and economic responsibility</li>
+            <li><strong>Farmer-Centric:</strong> Solutions designed with farmer needs in mind</li>
+            <li><strong>Impact:</strong> Measurable improvement in farmer livelihoods</li>
+            <li><strong>Integrity:</strong> Transparent and ethical business practices</li>
+          </ul>
+        </div>
+      </div>
     </div>
   </section>
 
@@ -110,15 +86,18 @@
       <h2>Our Approach</h2>
       <div class="approach-grid">
         <div class="approach-card">
-          <h3>🔧 Technology</h3>
+          <h3><span><svg fill=#333 aria-hidden="true"focusable="false" class="icon" viewBox="2 -5 600 640" width="4em"height="4em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M512 160L512 416L128 416L128 160L512 160zM128 96C92.7 96 64 124.7 64 160L64 416C64 451.3 92.7 480 128 480L272 480L256 528L184 528C170.7 528 160 538.7 160 552C160 565.3 170.7 576 184 576L456 576C469.3 576 480 565.3 480 552C480 538.7 469.3 528 456 528L384 528L368 480L512 480C547.3 480 576 451.3 576 416L576 160C576 124.7 547.3 96 512 96L128 96z"/></svg></span>
+            Technology</h3>
           <p>Cutting-edge solar, IoT, and cloud-based solutions designed for the African context and smallholder farmer needs.</p>
         </div>
         <div class="approach-card">
-          <h3>👥 Service</h3>
+          <h3><span><svg  fill=#333 aria-hidden="true"focusable="false" class="icon" viewBox="2 -5 600 640" width="4em"height="4em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 192C256 156.7 284.7 128 320 128C355.3 128 384 156.7 384 192C384 227.3 355.3 256 320 256C284.7 256 256 227.3 256 192zM208 400C208 338.1 258.1 288 320 288C381.9 288 432 338.1 432 400L432 408C432 421.3 421.3 432 408 432L232 432C218.7 432 208 421.3 208 408L208 400zM424 208C424 177.1 449.1 152 480 152C510.9 152 536 177.1 536 208C536 238.9 510.9 264 480 264C449.1 264 424 238.9 424 208zM451.2 308.4C460.3 305.5 470 304 480 304C533 304 576 347 576 400L576 410.7C576 422.5 566.4 432 554.7 432L475.9 432C478.6 424.5 480 416.4 480 408L480 400C480 365.9 469.4 334.3 451.2 308.4zM188.8 308.4C170.6 334.4 160 365.9 160 400L160 408C160 416.4 161.4 424.5 164.1 432L85.3 432C73.6 432 64 422.4 64 410.7L64 400C64 347 107 304 160 304C170 304 179.7 305.5 188.8 308.4zM104 208C104 177.1 129.1 152 160 152C190.9 152 216 177.1 216 208C216 238.9 190.9 264 160 264C129.1 264 104 238.9 104 208zM32 504C32 490.7 42.7 480 56 480L584 480C597.3 480 608 490.7 608 504C608 517.3 597.3 528 584 528L56 528C42.7 528 32 517.3 32 504z"/></svg></span>
+            Service</h3>
           <p>Expert field support, training, and customer service that ensures farmers can maximize the value of our products.</p>
         </div>
         <div class="approach-card">
-          <h3>📊 Data</h3>
+          <h3><span><svg  fill=#333 aria-hidden="true"focusable="false" class="icon" viewBox="2 -5 600 640" width="4em"height="4em" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M96 96C113.7 96 128 110.3 128 128L128 464C128 472.8 135.2 480 144 480L544 480C561.7 480 576 494.3 576 512C576 529.7 561.7 544 544 544L144 544C99.8 544 64 508.2 64 464L64 128C64 110.3 78.3 96 96 96zM208 288C225.7 288 240 302.3 240 320L240 384C240 401.7 225.7 416 208 416C190.3 416 176 401.7 176 384L176 320C176 302.3 190.3 288 208 288zM352 224L352 384C352 401.7 337.7 416 320 416C302.3 416 288 401.7 288 384L288 224C288 206.3 302.3 192 320 192C337.7 192 352 206.3 352 224zM432 256C449.7 256 464 270.3 464 288L464 384C464 401.7 449.7 416 432 416C414.3 416 400 401.7 400 384L400 288C400 270.3 414.3 256 432 256zM576 160L576 384C576 401.7 561.7 416 544 416C526.3 416 512 401.7 512 384L512 160C512 142.3 526.3 128 544 128C561.7 128 576 142.3 576 160z"/></svg></span>
+            Data</h3>
           <p>Data-driven insights that help farmers make better decisions and optimize their operations for maximum impact.</p>
         </div>
       </div>
@@ -137,125 +116,13 @@
                     <h3>Leadership Team</h3>
                     <p>Our experienced leadership brings together expertise in agriculture, technology, impact investing, and business development.</p>
                     <a href="team.html" class="cta-link">Meet the Team →</a>
-                </div>
-            </div>
-        </div>
-      <div class="team-grid" style="margin-top:1rem;">
-        <div class="team-member">
-          <h3>Team Member</h3>
-          <img src="../images/TEAM.JPG" alt="Team Member" style="width:100%;height:220px;object-fit:scale-down;border-radius:8px;" loading="lazy" />
-          <p>Our dedicated team of professionals works tirelessly to develop, deploy, and support our innovative agricultural solutions.</p>
-        </div>
-      </div>
+                  </div>
+              </div>
+          </div>
   </section>
 
-  <!-- Partners Section -->
-  <section id="partners" class="about-section alternate-bg">
-    <div class="section-container">
-      <h2>Partners & Collaborators</h2>
-      <p class="section-intro">We work with leading organizations to amplify our impact across Africa.</p>
-
-      <div class="partners-carousel" aria-label="Partners logo carousel">
-        <div class="partners-track">
-          <a class="partner-logo-item" href="https://www.amref.org/" target="_blank" rel="noopener"><img src="../images/download amref logo.png" alt="Amref" loading="lazy" /></a>
-          <a class="partner-logo-item" href="https://www.usaid.gov/" target="_blank" rel="noopener"><img src="../images/usaid-1.jpg.webp" alt="USAID" loading="lazy" /></a>
-          <a class="partner-logo-item" href="https://www.rti.org/" target="_blank" rel="noopener"><img src="../images/rti.jpg.webp" alt="RTI" loading="lazy" /></a>
-          <a class="partner-logo-item" href="https://www.murang'a.go.ke/" target="_blank" rel="noopener"><img src="../images/muranga-county.jpg.webp" alt="Murang'a County" loading="lazy" /></a>
-        </div>
-      </div>
-
-      <div class="partners-cta">
-        <h3>Interested in Partnering?</h3>
-        <p>We're always looking for organizations committed to transforming agriculture in Africa.</p>
-        <a href="contact.html" class="cta-button primary">Get in Touch</a>
-      </div>
-    </div>
-    <style>
-      .partners-carousel { overflow: hidden; position: relative; background: #fff; border-radius: 8px; padding: 1rem; }
-      .partners-track { display: flex; gap: 2rem; align-items: center; animation: scrollLogos 30s linear infinite; }
-      .partner-logo-item { display: inline-flex; align-items: center; justify-content: center; min-width: 140px; max-width: 180px; }
-      .partner-logo-item img { width: 100%; height: 60px; object-fit: contain; filter: grayscale(20%); opacity: .9; transition: filter .2s, opacity .2s; }
-      .partner-logo-item:hover img { filter: none; opacity: 1; }
-      @keyframes scrollLogos { 0% { transform: translateX(0); } 100% { transform: translateX(-50%); } }
-      @media (max-width: 600px) { .partner-logo-item { min-width: 120px; } .partner-logo-item img { height: 48px; } }
-      .team-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap: 1.25rem; }
-      .team-member { background: #f8f9fa; border-top: 4px solid #a7cc40; border-radius: 8px; padding: 1rem; text-align: center; }
-    </style>
-    <script>
-      (function () {
-        const track = document.querySelector('.partners-track');
-        if (track) track.innerHTML = track.innerHTML + track.innerHTML; // duplicate for seamless loop
-      })();
-    </script>
-  </section>
-
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="footer-content">
-      <div class="footer-section">
-        <h4>Savanna Circuit</h4>
-        <p>Empowering farmers through technology and innovation</p>
-      </div>
-      <div class="footer-section">
-        <h4>Quick Links</h4>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="products.html">Products</a></li>
-          <li><a href="../store-app/index.html">Store</a></li>
-          <li><a href="impact.html">Impact</a></li>
-          <li><a href="careers.html">Careers</a></li>
-        </ul>
-      </div>
-      <div class="footer-section">
-        <h4>Company</h4>
-        <ul>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="about.html#partners">Partners</a></li>
-          <li><a href="https://sav-circuit.com/privacy-policy/">Privacy Policy</a></li>
-          <li><a href="https://sav-circuit.com/terms-of-operations/">Terms of Service</a></li>
-        </ul>
-      </div>
-      <div class="footer-section">
-        <h4>Follow Us</h4>
-        <div class="social-links">
-          <a href="https://www.facebook.com/savannacircuit/" aria-label="Facebook" class="social-facebook" target="_blank" rel="noopener">
-            <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M22 12.07C22 6.48 17.52 2 11.93 2S2 6.48 2 12.07C2 17.1 5.66 21.24 10.44 22v-7.01H7.9v-2.92h2.54V9.41c0-2.5 1.49-3.88 3.77-3.88 1.09 0 2.24.2 2.24.2v2.47h-1.26c-1.24 0-1.63.77-1.63 1.56v1.87h2.78l-.44 2.92h-2.34V22C18.34 21.24 22 17.1 22 12.07z"/></svg>
-          </a>
-          <a href="https://www.linkedin.com/company/savanna-circuit-technologies/about/" aria-label="LinkedIn" class="social-linkedin" target="_blank" rel="noopener">
-            <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M19 3A2.94 2.94 0 0 1 22 6v12a2.94 2.94 0 0 1-3 3H5a2.94 2.94 0 0 1-3-3V6a2.94 2.94 0 0 1 3-3h14Zm-9.54 16V10.5H7.06V19h2.4Zm-1.2-9.81a1.39 1.39 0 1 0 0-2.78 1.39 1.39 0 0 0 0 2.78ZM20 19v-5.2c0-2.8-1.49-4.1-3.47-4.1a3 3 0 0 0-2.72 1.49h-.06V10.5h-2.4V19h2.4v-4.48c0-1.18.21-2.32 1.69-2.32s1.5 1.36 1.5 2.4V19H20Z"/></svg>
-          </a>
-          <a href="https://www.instagram.com/savannacircuit/" aria-label="Instagram" class="social-instagram" target="_blank" rel="noopener">
-            <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2.2c3.2 0 3.6 0 4.9.1 1.2.1 1.9.2 2.4.4.6.2 1 .4 1.4.8.4.4.6.8.8 1.4.2.5.3 1.2.4 2.4.1 1.3.1 1.7.1 4.9s0 3.6-.1 4.9c-.1 1.2-.2 1.9-.4 2.4-.2.6-.4 1-.8 1.4-.4.4-.8.6-1.4.8-.5.2-1.2.3-2.4.4-1.3.1-1.7.1-4.9.1s-3.6 0-4.9-.1c-1.2-.1-1.9-.2-2.4-.4-.6-.2-1-.4-1.4-.8-.4-.4-.6-.8-.8-1.4-.2-.5-.3-1.2-.4-2.4C2.2 15.6 2.2 15.2 2.2 12s0-3.6.1-4.9c.1-1.2.2-1.9.4-2.4.2-.6.4-1 .8-1.4.4-.4.8-.6 1.4-.8.5-.2 1.2-.3 2.4-.4C8.4 2.2 8.8 2.2 12 2.2Zm0 1.8c-3.1 0-3.5 0-4.7.1-1 .1-1.6.2-2 .4-.5.2-.8.4-1.1.7-.3.3-.5.6-.7 1.1-.2.4-.3 1-.4 2-.1 1.2-.1 1.6-.1 4.7s0 3.5.1 4.7c.1 1 .2 1.6.4 2 .2.5.4.8.7 1.1.3.3.6.5 1.1.7.4.2 1 .3 2 .4 1.2.1 1.6.1 4.7.1s3.5 0 4.7-.1c1-.1 1.6-.2 2-.4.5-.2.8-.4 1.1-.7.3-.3.5-.6.7-1.1.2-.4.3-1 .4-2 .1-1.2.1-1.6.1-4.7s0-3.5-.1-4.7c-.1-1-.2-1.6-.4-2-.2-.5-.4-.8-.7-1.1-.3-.3-.6-.5-1.1-.7-.4-.2-1-.3-2-.4-1.2-.1-1.6-.1-4.7-.1Z"/></svg>
-          </a>
-          <a href="https://twitter.com/sav_circuittech" aria-label="X (Twitter)" class="social-x" target="_blank" rel="noopener">
-            <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M17.53 3h3.13l-6.84 7.82L22 21h-6.7l-5.23-6.82L3.9 21H.75l7.3-8.34L1 3h6.86l4.73 6.2L17.53 3Zm-1.17 16.2h1.73L7.72 4.68H5.86L16.36 19.2Z"/></svg>
-          </a>
-          <a href="https://api.whatsapp.com/send/?phone=+254714574007&text=Hello,%20From%20SCT%20Website." aria-label="WhatsApp" class="social-whatsapp" target="_blank" rel="noopener">
-            <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M20.5 3.5A10.5 10.5 0 0 0 3.8 17.9L2 22l4.3-1.7A10.5 10.5 0 1 0 20.5 3.5Zm-8.4 16.6c-1.8 0-3.5-.6-4.9-1.7l-.3-.2-2.9 1.1 1.1-2.8-.2-.3a8.5 8.5 0 1 1 7.2 4.9Zm4.9-6.3c-.3-.2-1.8-.9-2.1-1-.3-.1-.5-.2-.7.2-.2.3-.8 1-.9 1.1-.2.2-.3.2-.6.1-1.8-.9-3-1.6-4.2-3.6-.3-.4 0-.5.2-.7.2-.2.3-.3.4-.5.2-.2.1-.4 0-.6-.1-.2-.7-1.6-.9-2.2-.2-.5-.5-.5-.7-.5h-.6c-.2 0-.6.1-.9.4-.3.3-1.2 1.2-1.2 3s1.2 3.5 1.3 3.7c.2.2 2.3 3.6 5.7 5 2.1.9 2.9 1 3.9.8.6-.1 1.8-.7 2-1.4.2-.7.2-1.3.2-1.4 0-.1-.1-.2-.3-.3Z"/></svg>
-          </a>
-        </div>
-      </div>
-      <div class="footer-section">
-        <h4>Contact</h4>
-        <address>
-          <span class="address-line">
-            <a href="https://goo.gl/maps/8NZGZXvDicZS7rgp9" target="_blank"><span class="address-text">Savanna Circuit Technologies</span></a>
-            <svg class="pin" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2C8.7 2 6 4.7 6 8c0 4.6 6 12 6 12s6-7.4 6-12c0-3.3-2.7-6-6-6Zm0 8.5c-1.4 0-2.5-1.1-2.5-2.5S10.6 5.5 12 5.5s2.5 1.1 2.5 2.5S13.4 10.5 12 10.5Z"/></svg>
-          </span><br />
-          P.O. Box 5107-00200, Nairobi, Kenya
-        </address>
-        <ul class="contact-list">
-          <li>Tel: <a href="tel:0208000265">020 800 0265</a></li>
-          <li>Mobile: <a href="tel:+254714574007">+254 714 574 007</a></li>
-          <li>Email: <a href="mailto:info@sav-circuit.com">info@sav-circuit.com</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="footer-bottom">
-      <p>&copy; 2025 Savanna Circuit Technologies. All rights reserved.|created by TechVannah</p>
-    </div>
-  </footer>
+      <!--Footer-->
+  <div id="footer-placeholder"></div>
 
   <script src="script.js"></script>
 </body>
