--- a/products-detailed/nomad-cans-10l.html
+++ b/products-detailed/nomad-cans-10l.html
@@ -7,26 +7,29 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="nav-container">
-            <div class="logo">
-                <a href="../../index.html">
-                    <img src="../../images/sav logo (2).jpeg" alt="Savanna Circuit Logo">
-                    <span class="site-title"> SAVANNA CIRCUIT STORE</span>
-                </a>
-            </div>
-        </div>
-    </nav>
+    <!-- Header -->
+      <div id="header-placeholder"></div>
 
-    <section class="hero-subpage">
-        <h1>Nomad Can 10L</h1>
-        <p>Insulated, food-grade milk can with integrated thermocore cooling</p>
-    </section>
-
+<!--breadcrumb-->
     <nav class="breadcrumb">
-        <a href="../index.html">Store</a> / <a href="../index.html#solar-thrive">Solar Thrive</a> / Nomad Can 10L
+        <a href="../index.html">Store</a> / <a href="../index.html#SOLAR-THRIVE">Solar Thrive</a> / Nomad Can 10L
     </nav>
 
+    <!--hero section-->
+<section class="hero-subpage">
+    <div class="hero-bg">
+        <!-- Use high-quality, lightweight imagery or subtle video -->
+        <img src="../../images/NOMAD 10 LTRS.png"  alt="MaziwaPlus Chiller" class="bg-media">
+        <div class="overlay"></div>
+    </div>
+    
+    <div class="hero-content glass-effect">
+        <h1 class="reveal-text">Nomad Can 10L</h1>
+        <p class="fade-in">Insulated, food-grade milk can with integrated thermocore cooling</p>
+    </div>
+</section>
+
+<!--Product section-->
     <section class="product-details-full">
         <div class="section-container">
             <div class="product-main-grid">
@@ -34,6 +37,14 @@
                     <div class="product-image-large">
                         <img src="../../images/NOMAD 10 LTRS.png" alt="Nomad Can 10L">
                     </div>
+
+                 <div class="product-info-section">
+                        <h2>Nomad Can 10L</h2>
+                     <div class="product-summary">
+                         <p>Nomad Cans are patented, insulated food-grade containers designed for the safe transport of milk. Built for modular use with Ice Water Dispensers (IWD) or mobile trikes, these cans maintain optimal temperature using a chilled glycol thermocore insert.</p>
+                     </div> 
+                  </div>
+
                     <div class="product-quick-specs">
                         <h3>Quick Specs</h3>
                         <ul>
@@ -46,52 +57,13 @@
                         </ul>
                     </div>
                 </div>
-
-                <div class="product-info-section">
-                    <h2>Nomad Can 10L</h2>
-                    <div class="product-summary">
-                        <p>Nomad Cans are patented, insulated food-grade containers designed for the safe transport of milk. Built for modular use with Ice Water Dispensers (IWD) or mobile trikes, these cans maintain optimal temperature using a chilled glycol thermocore insert.</p>
-                    </div>
-                    <div class="features-list">
-                        <h3>Key Features</h3>
-                        <ul>
-                            <li>Integrated cooling using a Thermocore charged with chilled glycol water</li>
-                            <li>Leak-proof, wide-mouth lid for easy pour and cleaning</li>
-                            <li>Food-grade Aluminium construction with HDPE cladding</li>
-                            <li>Double-insulated body for temperature retention</li>
-                            <li>Designed for rugged transport and daily use</li>
-                        </ul>
-                    </div>
-                    <div class="action-buttons">
-                        <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Nomad%20Can%2010L" target="_blank" rel="noopener" class="cta-button primary large">Request Quote</a>
-                        <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20to%20speak%20with%20an%20expert%20about%20Nomad%20Can%2010L" target="_blank" rel="noopener" class="cta-button secondary large">Talk to an Expert</a>
-                    </div>
-                </div>
             </div>
         </div>
-    </section>
+    </section> 
 
     <section class="product-description-full">
         <div class="section-container">
-            <div class="description-grid">
-                <div class="description-column">
-                    <h3>Technical Specifications</h3>
-                    <ul class="specs-list">
-                        <li><strong>Capacity:</strong> 10 Liters</li>
-                        <li><strong>Weight (with Thermocore):</strong> 3.6 kg</li>
-                        <li><strong>Cooling Method:</strong> Thermocore insert cooled by glycol water</li>
-                        <li><strong>Materials:</strong> Food-grade Aluminium, HDPE cladding, double insulation</li>
-                        <li><strong>Lid:</strong> Leak-proof, lockable, wide-mouth</li>
-                    </ul>
-
-                    <h3>Use Cases</h3>
-                    <ul class="specs-list">
-                        <li>On-farm milk cooling and storage</li>
-                        <li>Milk collection from decentralized farmers</li>
-                        <li>Pre-cooled storage for market days or remote sale points</li>
-                    </ul>
-                </div>
-
+            <div class="description-grid"> 
                 <div class="description-column">
                     <h3>Superior Benefits</h3>
                     <ul class="specs-list">
@@ -100,11 +72,12 @@
                         <li><strong>Sustainability:</strong> Carbon-neutral cooling vs. diesel refrigeration</li>
                         <li><strong>Operational:</strong> Reduced spoilage; improved reliability over long distances</li>
                     </ul>
-
+                </div>
+                <div class="description-column">
                     <h3>Weight Comparison</h3>
                     <ul class="specs-list">
                         <li>Aluminium (w/lid): 2.4 kg (10L)</li>
-                        <li>Stainless steel (no lid): 3.0 kg (10L)</li>
+                        <li>stainless steel (no lid): 3.0 kg (10L)</li>
                         <li>Nomad Can (with Thermocore): 3.6 kg (10L)</li>
                     </ul>
                 </div>
@@ -112,11 +85,13 @@
                 <div class="description-column">
                     <h3>Compatibility</h3>
                     <ul class="specs-list">
-                        <li>Ice Water Dispensers (IWD) for charging Thermocore</li>
+                        <li>Ice Water Dispensers (IWD) for refilling Thermocore</li>
                         <li>Nomad EV/D mobile cooling and dispensing</li>
                         <li>MaziwaPlus DMS for collection logs and traceability</li>
                     </ul>
+                </div>
 
+                <div class="description-column">
                     <h3>Handling & Care</h3>
                     <ul class="specs-list">
                         <li>Rinse and sanitize after use; allow to dry fully</li>
@@ -128,24 +103,35 @@
         </div>
     </section>
 
+    <section class="product-cta">
+        <div class="section-container">
+            <h2>Reduce Spoilage, Improve Quality</h2>
+            <p>Adopt Nomad Cans for secure, cooled milk transport</p>
+            <div class="cta-buttons">
+                <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Nomad%20Can%2010L" target="_blank" rel="noopener" class="cta-button primary large">Request Quote</a>
+                <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20to%20speak%20to%20sales%20about%20Nomad%20Can%2010L" target="_blank" rel="noopener" class="cta-button secondary large">Speak to Sales</a>
+            </div>
+        </div>
+    </section>
+
     <section class="related-products">
         <div class="section-container">
             <h2>Related Products</h2>
             <div class="related-grid">
                 <div class="related-card">
-                    <img class="product-image small" src="..\images\IWD.jpg" alt="iwd-ice-water-dispenser" loading="lazy" />
+                    <img class="product-image small" src="../../images/IWD.jpg" alt="iwd-ice-water-dispenser" loading="lazy" />
                     <h4>Ice Water Dispenser (IWD)</h4>
                     <p>Chilled glycol water for Thermocores</p>
                     <a href="iwd-ice-water-dispenser.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                     <img class="product-image small" src="..\images\Eco-Sav bag.jpg" alt="eco-sav-bags" loading="lazy" />
+                     <img class="product-image small" src="../../images/Eco-Sav bag.jpg" alt="eco-sav-bags" loading="lazy" />
                     <h4>EcoSav Bags</h4>
                     <p>Insulated bags for fisheries and produce</p>
                     <a href="eco-sav-bags.html" class="cta-button secondary">View Details</a>
                 </div>
                 <div class="related-card">
-                     <img class="product-image small" src="..\images\M+ DMS.png" alt="maziwaplus-dms" loading="lazy" />
+                     <img class="product-image small" src="../../images/M+ DMS.png" alt="maziwaplus-dms" loading="lazy" />
                     <h4>MaziwaPlus DMS</h4>
                     <p>Digital dairy records and payments</p>
                     <a href="maziwaplus-dms.html" class="cta-button secondary">View Details</a>
@@ -174,84 +160,8 @@
         </div>
     </section>
 
-    <section class="product-cta">
-        <div class="section-container">
-            <h2>Reduce Spoilage, Improve Quality</h2>
-            <p>Adopt Nomad Cans for secure, cooled milk transport</p>
-            <div class="cta-buttons">
-                <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20a%20quote%20for%20Nomad%20Can%2010L" target="_blank" rel="noopener" class="cta-button primary large">Request Quote</a>
-                <a href="https://wa.me/254714574007?text=Hello%20Savanna%20Circuit,%20I%20would%20like%20to%20speak%20to%20sales%20about%20Nomad%20Can%2010L" target="_blank" rel="noopener" class="cta-button secondary large">Speak to Sales</a>
-            </div>
-        </div>
-    </section>
+<div id="footer-placeholder"></div>
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="footer-content">
-            <div class="footer-section">
-                <h4>Savanna Circuit</h4>
-                <p>Empowering farmers through technology and innovation</p>
-            </div>
-            <div class="footer-section">
-                <h4>Quick Links</h4>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="store.html">Store</a></li>
-                    <li><a href="impact.html">Impact</a></li>
-                    <li><a href="careers.html">Careers</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h4>Company</h4>
-                <ul>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="about.html#partners">Partners</a></li>
-                    <li><a href="https://sav-circuit.com/privacy-policy/">Privacy Policy</a></li>
-                    <li><a href="https://sav-circuit.com/terms-of-operations/">Terms of Service</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h4>Follow Us</h4>
-                <div class="social-links">
-                    <a href="https://www.facebook.com/savannacircuit/" aria-label="Facebook" class="social-facebook" target="_blank" rel="noopener">
-                        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M22 12.07C22 6.48 17.52 2 11.93 2S2 6.48 2 12.07C2 17.1 5.66 21.24 10.44 22v-7.01H7.9v-2.92h2.54V9.41c0-2.5 1.49-3.88 3.77-3.88 1.09 0 2.24.2 2.24.2v2.47 h-1.26c-1.24 0-1.63.77-1.63 1.56v1.87h2.78l-.44 2.92h-2.34V22C18.34 21.24 22 17.1 22 12.07z"/></svg>
-                    </a>
-                    <a href="https://www.linkedin.com/company/savanna-circuit-technologies/about/" aria-label="LinkedIn" class="social-linkedin" target="_blank" rel="noopener">
-                        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M19 3A2.94 2.94 0 0 1 22 6v12a2.94 2.94 0 0 1-3 3H5a2.94 2.94 0 0 1-3-3V6a2.94 2.94 0 0 1 3-3h14Zm-9.54 16V10.5H7.06V19h2.4Zm-1.2-9.81a1.39 1.39 0 1 0 0-2.78 1.39 1.39 0 0 0 0 2.78ZM20 19v-5.2c0-2.8-1.49-4.1-3.47-4.1a3 3 0 0 0-2.72 1.49h-.06V10.5h-2.4V19h2.4v-4.48c0-1.18.21-2.32 1.69-2.32s1.5 1.36 1.5 2.4V19H20Z"/></svg>
-                    </a>
-                    <a href="https://www.instagram.com/savannacircuit/" aria-label="Instagram" class="social-instagram" target="_blank" rel="noopener">
-                        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2.2c3.2 0 3.6 0 4.9.1 1.2.1 1.9.2 2.4.4.6.2 1 .4 1.4.8.4.4.6.8.8 1.4.2.5.3 1.2.4 2.4.1 1.3.1 1.7.1 4.9s0 3.6-.1 4.9c-.1 1.2-.2 1.9-.4 2.4-.2.6-.4 1-.8 1.4-.4.4-.8.6-1.4.8-.5.2-1.2.3-2.4.4-1.3.1-1.7.1-4.9.1s-3.6 0-4.9-.1c-1.2-.1-1.9-.2-2.4-.4-.6-.2-1-.4-1.4-.8-.4-.4-.6-.8-.8-1.4-.2-.5-.3-1.2-.4-2.4C2.2 15.6 2.2 15.2 2.2 12s0-3.6.1-4.9c.1-1.2.2-1.9.4-2.4.2-.6.4-1 .8-1.4.4-.4.8-.6 1.4-.8.5-.2 1.2-.3 2.4-.4C8.4 2.2 8.8 2.2 12 2.2Zm0 1.8c-3.1 0-3.5 0-4.7.1-1 .1-1.6.2-2 .4-.5.2-.8.4-1.1.7-.3.3-.5.6-.7 1.1-.2.4-.3 1-.4 2-.1 1.2-.1 1.6-.1 4.7s0 3.5.1 4.7c.1 1 .2 1.6.4 2 .2.5.4.8.7 1.1.3.3.6.5 1.1.7.4.2 1 .3 2 .4 1.2.1 1.6.1 4.7.1s3.5 0 4.7-.1c1-.1 1.6-.2 2-.4.5-.2.8-.4 1.1-.7.3-.3.5-.6.7-1.1.2-.4.3-1 .4-2 .1-1.2.1-1.6.1-4.7s0-3.5-.1-4.7c-.1-1-.2-1.6-.4-2-.2-.5-.4-.8-.7-1.1-.3-.3-.6-.5-1.1-.7-.4-.2-1-.3-2-.4-1.2-.1-1.6-.1-4.7-.1Zm0 3.5a6.5 6.5 0 1 1 0 13 6.5 6.5 6.5 0 0 1 0-13 6.5 6.5 6.5 0 0 1 0-13Zm0 2.2a4.3 4.3 0 1 0 0 8.6 4.3 4.3 0 0 0 0-8.6Zm5.3-3a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Z"/></svg>
-                    </a>
-                    <a href="https://twitter.com/sav_circuittech" aria-label="X (Twitter)" class="social-x" target="_blank" rel="noopener">
-                        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M17.53 3h3.13l-6.84 7.82L22 21h-6.7l-5.23-6.82L3.9 21H.75l7.3-8.34L1 3h6.86l4.73 6.2L17.53 3Zm-1.17 16.2h1.73L7.72 4.68H5.86L16.36 19.2Z"/></svg>
-                    </a>
-                    <a href="https://api.whatsapp.com/send/?phone=+254714574007&text=Hello,%20From%20SCT%20Website." aria-label="WhatsApp" class="social-whatsapp" target="_blank" rel="noopener">
-                        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M20.5 3.5A10.5 10.5 0 0 0 3.8 17.9L2 22l4.3-1.7A10.5 10.5 0 1 0 20.5 3.5Zm-8.4 16.6c-1.8 0-3.5-.6-4.9-1.7l-.3-.2-2.9 1.1 1.1-2.8-.2-.3a8.5 8.5 0 1 1 7.2 4.9Zm4.9-6.3c-.3-.2-1.8-.9-2.1-1-.3-.1-.5-.2-.7.2-.2.3-.8 1-.9 1.1-.2.2-.3.2-.6.1-1.8-.9-3-1.6-4.2-3.6-.3-.4 0-.5.2-.7.2-.2.3-.3.4-.5.2-.2.1-.4 0-.6-.1-.2-.7-1.6-.9-2.2-.2-.5-.5-.5-.7-.5h-.6c-.2 0-.6.1-.9.4-.3.3-1.2 1.2-1.2 3s1.2 3.5 1.3 3.7c.2.2 2.3 3.6 5.7 5 2.1.9 2.9 1 3.9.8.6-.1 1.8-.7 2-1.4.2-.7.2-1.3.2-1.4 0-.1-.1-.2-.3-.3Z"/></svg>
-                    </a>
-                </div>
-            </div>
-            <div class="footer-section">
-                <h4>Contact</h4>
-                <address>
-                    <span class="address-line">
-                        <a href="https://goo.gl/maps/8NZGZXvDicZS7rgp9"target="_blank"><span class="address-text">Savanna Circuit Technologies</span></a> 
-                        <svg class="pin" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 2C8.7 2 6 4.7 6 8c0 4.6 6 12 6 12s6-7.4 6-12c0-3.3-2.7-6-6-6Zm0 8.5c-1.4 0-2.5-1.1-2.5-2.5S10.6 5.5 12 5.5s2.5 1.1 2.5 2.5S13.4 10.5 12 10.5Z"/></svg>
-                        </span><br>
-                    P.O. Box 5107-00200, Nairobi, Kenya
-                </address>
-                <ul class="contact-list">
-                    <li>Tel: <a href="tel:0208000265">020 800 0265</a></li>
-                    <li>Mobile: <a href="tel:+254714574007">+254 714 574 007</a></li>
-                    <li>Email: <a href="mailto:info@sav-circuit.com">info@sav-circuit.com</a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <p>&copy; 2025 Savanna Circuit Technologies. All rights reserved.|created by TechVannah</p>
-        </div>
-    </footer>
-
-    <script src="../store-script.js"></script>
+    <script src="../store-script.js"defer></script>
 </body>
 </html>
